--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,26 +17,53 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td>
 
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
 
+         <td>
+           <% if @book.favorited_by?(current_user) %>
+          <p>
+            <%= link_to book_favorites_path(@book), method: :delete do %>
+              ♥<%= @book.favorites.count %>
+            <% end %>
+          </p>
+          <% else %>
+          <p>
+            <%= link_to book_favorites_path(@book), method: :post do %>
+              ♡<%= @book.favorites.count %>
+            <% end %>
+          </p>
+          <% end %>
+        </td>
+
 
            <td>
-           <p>コメント件数：<%= @book.book_comments.count %></p>
+           <p>コメント数：<%= @book.book_comments.count %></p>
            </td>
         </tr>
+
         <tr>
-          <td>
+
           <% @book.book_comments.each do |book_comment| %>
-            <%= image_tag book_comment.user.get_profile_image(100,100) %>
+          <td>
+            <%= image_tag book_comment.user.get_profile_image(50,50) %>
             <%= book_comment.user.name %>
-            <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
-          <% end %>
+          </td>
+          <td>
+            <%= book_comment.comment %>
+          </td>
+          <td>
+            <% if book_comment.user == current_user %>
+            <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger" %>
+            <% end %>
+
           </td>
         </tr>
+        <% end %>
 
         <tr>
         <td>
