--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-      <main>
+    <%= render 'layouts/search' %>
+    <main>
         <p id="notice"><%= notice %></p>
-        <%= yield %>
-      </main>
+   <%= yield %>
+    </main>
     <%= render 'layouts/footer' %>
   </body>
 </html>
