--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -42,39 +42,19 @@
 
 
            <td>
-           <p>コメント数：<%= @book.book_comments.count %></p>
+           <p>コメント数：<span id="comment_count"><%= @book.book_comments.count %></span></p>
            </td>
         </tr>
+     </table>
+        <div id="book-comments">
+        <%= render 'book_comments/show', book: @book, book_comment: @book_comment %>
+        </div>
 
-        <tr>
+        <div id="comment-form">
+        <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
+        </div>
 
-          <% @book.book_comments.each do |book_comment| %>
-          <td>
-            <%= image_tag book_comment.user.get_profile_image(50,50) %>
-            <%= book_comment.user.name %>
-          </td>
-          <td>
-            <%= book_comment.comment %>
-          </td>
-          <td>
-            <% if book_comment.user == current_user %>
-            <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger" %>
-            <% end %>
 
-          </td>
-        </tr>
-        <% end %>
-
-        <tr>
-        <td>
-          <%= form_with model: [@book, @book_comment] do |f| %>
-            <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-            <%= f.submit "送信する" %>
-          <% end %>
-        </td>
-         </tr>
-
-      </table>
     </div>
   </div>
 </div>
