--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,20 +16,9 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <td>
-           <% if book.favorited_by?(current_user) %>
-          <p>
-            <%= link_to book_favorites_path(book), method: :delete do %>
-              ♥<%= book.favorites.count %>
-            <% end %>
-          </p>
-          <% else %>
-          <p>
-            <%= link_to book_favorites_path(book), method: :post do %>
-              ♡<%= book.favorites.count %>
-            <% end %>
-          </p>
-          <% end %>
+
+        <td class=<%= "favorite-" + book.id.to_s %> >
+            <%= render "favorites/favo", book: book %>
         </td>
         <td>
            <p>コメント数：<span id="comment_count"><%= @book.book_comments.count %></span></p>
