--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,21 +24,9 @@
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
 
-         <td>
-           <% if @book.favorited_by?(current_user) %>
-          <p>
-            <%= link_to book_favorites_path(@book), method: :delete do %>
-              ♥<%= @book.favorites.count %>
-            <% end %>
-          </p>
-          <% else %>
-          <p>
-            <%= link_to book_favorites_path(@book), method: :post do %>
-              ♡<%= @book.favorites.count %>
-            <% end %>
-          </p>
-          <% end %>
-        </td>
+         <td class=<%= "favorite-" + @book.id.to_s %> >
+            <%= render "favorites/favo", book: @book %>
+          </td>
 
 
            <td>
