--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -23,6 +23,7 @@
         <td>
            <p>コメント数：<span id="comment_count"><%= @book.book_comments.count %></span></p>
         </td>
+        <td>閲覧数: <%= book.read_counts.count %></td>
       </tr>
     <% end %>
   </tbody>
